name:                region
version:             0.2.0.0
-- synopsis:            
-- description:         
license:             MIT
-- license-file:        LICENSE
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Source, Target, Translate, Common, Type, Unify
  -- other-modules:       
  default-extensions:  FlexibleContexts
  build-depends:       base >=4.8 && <4.9, containers >=0.5 && <0.6, mtl, lens
  hs-source-dirs:      src
  default-language:    Haskell2010
